# fanservice

./: .travis.yml  Cargo.toml  README.md
src/: client.rs  daemon.rs  main.rs  poweredge.rs  sense.rs
support/: fanservice.service
