[package]
name = "fanservice"
version = "0.2.0"
edition = "2018"
description = "Temperature-sensor based fan-speed regulator for PowerEdge servers"
keywords = ["cli", "system", "hardware", "service", "daemon"]
categories = ["command-line-utilities", "hardware-support", "linux"]

[dependencies]
bincode = "1.3"
cfg-if = "1.0"
clap = "2.33"
libc = "0.2"
log = { version = "0.4", features = ["release_max_level_warn"] }
sensors = "0.2"
serde = { version = "1.0", features = ["derive"] }
signal-hook = "0.3"
# needed for the poweredge backend
ipmiraw = { version = "0.4", optional = true }
# no loggers are included by default
env_logger = { version = "0.9", optional = true }
systemd-journal-logger = { version = "0.3", optional = true }

[features]
default = ["ipmi"]
ipmi = ["ipmiraw"]
systemd = ["systemd-journal-logger"]
